<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basketball Scout Helper</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to the Basketball Scout Helper!</string>
    <string name="select_player">Select a Player:</string>
    <string name="add_player">Add New Player</string>
    <string name="title_activity_add_aplayer">Add A Player</string>
    <string name="add_player_prompt">Enter Information for New Player</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="number">Player Number</string>
    <string name="team">Team Name</string>
    <string name="height">Player Height</string>
    <string name="yearsExp">Years of Experience</string>
    <string name="position">Player Position</string>
    <string name="title_activity_add_agame">add_agame</string>
    <string name="add_game_prompt">Start Tracking Your Players Stats</string>
    <string name="minus_stat"> - </string>
    <string name="add_stat"> + </string>
    <string name="opposing_team_prompt">Opposing Team Name:</string>

</resources>
